--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                       	</div>
                       </div>
                 	  <div class="row" style="height:60px"></div>
-                      <div class="row">
+                      <div class="row myTable-second-half">
                         <div class="slider-item slider-img-wrapper">
                           <a  href="#portfolio1" class="local-scroll">
                           <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
@@ -91,7 +91,7 @@
                           </a>
                         </div>
                       </div>
-                      <div class="row">
+                      <div class="row myTable-second-half">
                         <div class="slider-item slider-img-wrapper">
                           <a  href="#portfolio3" class="local-scroll">
                           <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
@@ -121,7 +121,7 @@
                           </a>
                         </div>
                       </div>
-                      <div class="row">
+                      <div class="row myTable-second-half">
                         <div class="slider-item slider-img-wrapper">
                           <a  href="#portfolio5" class="local-scroll">
                           <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
@@ -482,7 +482,7 @@
 						<div class="input-field">
 							<textarea name="message" class="form-control" placeholder="Your message..." disabled="true"></textarea>
 						</div>
-						<button type="submit" id="submit" class="btn btn1" style="padding-top:3px; margin-bottom:20px" disabled="true">Send</button>
+						<button type="submit" id="submit" class="form-control btn btn1" style="padding-top:3px; margin-bottom:30px" disabled="true">Send</button>
 						<p>Message Function (PHP) is Currently Not Supported by GitHub Page</p>
                     </form>
 				</div>
