--- a/index.html
+++ b/index.html
@@ -450,12 +450,12 @@
     <section id="sec6">
     	<div class="sec6mask"></div>
     	<div id="sec6-content" class="container">
-			<div class="row">
-				<div class="sec-title text-center" data-wow-delay="0.2s">
-					<h2 class="wow fadeInDown">Lets Talk</h2>
-              		<hr class="hr-dark wow zoomIn">
-                    <p class="wow animated fadeInUp">I am open for hire!</p>
-				</div>
+			<div class="sec-title text-center" data-wow-delay="0.2s">
+				<h2 class="wow fadeInDown"><div class="sec6titleh2">Lets Talk</div></h2>
+              	<hr class="hr-dark wow zoomIn">
+                <p class="wow fadeInUp"><div class="sec6titlep">I am open for hire!</div></p>
+			</div>
+            <div class="row">
                 <div class="contact-details-wrapper col-md-5 wow fadeInLeft" data-wow-delay="0.3s">
 					<address class="contact-details">
 						<!--<h3>Pick your way</h3>	-->				
@@ -463,11 +463,9 @@
                         <p><a href="mailto:chutianxin@gmail.com"><i class="fa fa-envelope fa-18x"></i><span class="hidespan2">chutianxin@gmail.com</span></a></p>
                         <p><a href="skype:c.horizon?userinfo"><i class="fa fa-skype fa-2x"></i><span class="hidespan3">TChu</span></a></p>
         				<p><a href="tel:765-714-5794"><i class="fa fa-phone fa-2x"></i><span class="hidespan4">(765) 714-5794</span></a></p>
-        				
 					</address>
 				</div>
-                <div class="col-md-2"></div>
-                <div class="col-md-5 contact-form wow fadeInRight" data-wow-delay="0.4s">
+                <div class="col-md-6 contact-form wow fadeInRight col-md-offset-1" data-wow-delay="0.4s">
                 	<h3 class="form-headline">Leave me a Message</h3>
 					<form action="src/sendmail.php" method="post">
 						<div class="input-field">
@@ -507,8 +505,5 @@
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbYMZkplMyzHPu7yxStB4w50DINGq5cn8&callback=initMap"
         async defer></script>
     <script src="js/chu-custom-js.js"></script>
-    <script>
-        new WOW().init();
-    </script>
 </body>
 </html>
