--- a/index.html
+++ b/index.html
@@ -415,27 +415,33 @@
               		<p class="wow animated fadeInUp-light">Find me on social network</p>
 				</div>
 				<ul class="social-button">
-					<li id="facebooklink" class="wow zoomIn">
-                    	<a href="https://www.facebook.com/tianxin.chu" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>
+					<li id="facebooklink" class="col-sm-2 wow zoomIn col-sm-offset-3">
+                    	<div>
+                    		<a href="https://www.facebook.com/tianxin.chu" target="_blank"><i class="fa fa-facebook fa-2x"></i></a>
+                        </div>
                     </li>
-					<li id="linkedinlink" class="wow zoomIn" data-wow-delay="0.2s">
-                    	<a href="https://www.linkedin.com/in/tianxin-chu-980881a4" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a>
+					<li id="linkedinlink" class="col-sm-2 wow zoomIn" data-wow-delay="0.2s">
+                    	<div>
+                    		<a href="https://www.linkedin.com/in/tianxin-chu-980881a4" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a>
+                        </div>
                     </li>
-					<li id="wechatlink" class="wow zoomIn" data-wow-delay="0.4s">
+					<li id="wechatlink" class="col-sm-2 wow zoomIn" data-wow-delay="0.4s">
                     	<div class="dropup"> 
                         	<a class="dropdown-toggle" type="button" data-toggle="dropdown"><i class="fa fa-weixin fa-2x"></i></a>
             				<ul class="dropdown-menu">
               					<img src="imgs/wechatbarcode.jpg" class="barcode" alt="" height="400">
             				</ul>
           				</div>
-                    </li>							
+                    </li>
+                    <li class="col-sm-3"></li>			
 				</ul>
 			</div>
             <div class="row">
             	<ul class="hoverhints">
-                	<li id="facebookhint">Open FaceBook in New Tab</li>
-                	<li id="linkedinhint">Open LinkedIn in New Tab</li>
-                    <li id="wechathint">Scan Barcode</li>
+                	<li id="facebookhint" class="col-sm-2 col-sm-offset-3">Open FaceBook<br/>in New Tab</li>
+                	<li id="linkedinhint" class="col-sm-2">Open LinkedIn<br/>in New Tab</li>
+                    <li id="wechathint" class="col-sm-2">Scan Barcode</li>
+                    <li class="col-sm-3"></li>
                 </ul>
             </div>
             <div class="row wechat-dropup">
