--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <!--<img id="smile1" src="imgs/smile.png">
             <img id="smile2" src="imgs/smile.png">-->
             <img id="smile3" src="imgs/icons/smile.png" alt="Loading smile...">
-            <p id="sec1-p">I'M A <span class="sec1-p-span" id="coe">Software Engineer</span> & <span class="sec1-p-span" id="uiux">Web Developer</span></p>
+            <p id="sec1-p">I'M A <span class="sec1-p-span" id="coe">Software Engineer&nbsp;</span>FROM<span class="sec1-p-span" id="uiux">&nbsp;PITT</span></p>
         </div>
         <!--<div id="" class="chu-down"><img src="imgs/chu-down.png"></div>-->
         <div class="arrow_box"></div>
@@ -248,7 +248,7 @@
                 <div class="aboutright-inner text-center">
 				  	<div class="clearfix wow fadeInUp" data-wow-delay="0.3s">
 						<span>I've got what you need!</span>
-						<p>I am enthusiastic with any programming work related to GUI  and database. I am hard-working and always on time! Take a look at what I can do and what I've done!</p>
+						<p>I am enthusiastic with any programming work related to graphic user interface and database. I am hard-working and always on time! Take a look at what I can do and what I've done!</p>
 					</div>
 				</div>
               </div>
@@ -432,8 +432,7 @@
               					<img src="imgs/wechatbarcode.jpg" class="barcode" alt="" height="400">
             				</ul>
           				</div>
-                    </li>
-                    <li class="col-sm-3"></li>			
+                    </li>		
 				</ul>
 			</div>
             <div class="row">
