--- a/index.html
+++ b/index.html
@@ -277,7 +277,6 @@
                 	<img class="pimg-code" src="imgs/portfolio/face-code.png" alt="Loading FaceSpace...">
                     <img class="pimg" src="imgs/portfolio/face0.png" alt="Loading FaceSpace...">
                 </div>
-                <div class="col-sm-1"></div>
               </div>
               <div class="row text-center" id="portfolio2">
                 <div class="col-sm-6 pimg-wrapper wow fadeInUp col-sm-offset-1">
@@ -289,7 +288,6 @@
                     <p>Airome, the smart purifier. This is a web based file system coded for the product presentation. The focuses are on optimizing large images/videos to improve performance and building smooth transitions and animations.</p>
                     <a class="btn btn1 btn2" href="https://github.com/tic30/Airome" target="_blank">See Code in GitHub</a>
                 </div>
-                <div class="col-sm-1"></div>
               </div>
               <div class="row text-center" id="portfolio3">
                 <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
@@ -301,7 +299,6 @@
                 	<img class="pimg-code" src="imgs/portfolio/xprice-code.png" alt="Loading Panther Read...">
                     <img class="pimg" src="imgs/portfolio/xprice1.png" alt="Loading Panther Read...">
                 </div>
-                <div class="col-sm-1"></div>
               </div>
               <div class="row text-center" id="portfolio4">
                 <div class="col-sm-6 pimg-wrapper wow fadeInUp col-sm-offset-1">
@@ -313,10 +310,9 @@
                     <p>CTC Railway control system, a combination of embedded system and supporting software programming task. The final prototype was designed and built stricktly according to documents provided by Port Authority(PAAC).</p>
                     <a class="btn btn1 btn2" href="https://github.com/tic30/CTC-Railway-System-By-RedPanda-Coding/tree/master/src/cn/ctc" target="_blank">See Code in GitHub</a>
                 </div>
-                <div class="col-sm-1"></div>
               </div>
               <div class="row text-center" id="portfolio5">
-                <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
+                <div class="col-sm-3 col-md-3 pp-wrapper wow fadeInDown col-sm-offset-1">
                 	<h3><strong>Java, Android API, Adobe Design Tools</strong></h3>
                     <p>CrossUniv Bus tracking app, features trip-by-school-bus planning with feeds from PITT, CMU and city bus, all in one app. This app is designed for local students to enjoy bus rides with highest possible time efficiency.</p>
                     <a class="btn btn1 btn2" href="https://www.behance.net/gallery/38281809/CrossUniv-Bus" target="_blank">Go to my Bēhance</a>
@@ -325,7 +321,6 @@
                 	<img class="pimg-code" src="imgs/portfolio/cross1.gif" alt="Loading CrossUniv...">
                     <img class="pimg" src="imgs/portfolio/cross0.gif" alt="Loading CrossUniv...">
                 </div>
-                <div class="col-sm-1"></div>
               </div>
               <div class="row text-center" id="portfolio6">
                 <div class="col-sm-6 pimg-wrapper wow fadeInUp col-sm-offset-1">
@@ -336,7 +331,6 @@
                 	<h3><strong>VHDL, MIPS, Embedded System</strong></h3>
                     <p>MIPS CPU Design. This is a fully functional MIPS pipelined processor designed and simulated in HDL Designer. We also integrated this CPU into Wishbone bus and tested its performance.</p>
                 </div>
-              	<div class="col-sm-1"></div>
               </div>
             </div>
         </div>
