--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 </head>
 
 <body id="pageTop">
-	<div class="preloader-wrapper">
+	<div class="preloader-wrapper text-center">
     	<img src="imgs/chu-preloader.gif" alt="Loading preloader...">
+        <div><a class="btn btn1 btn2 preloader-button">Continue...</a></div>
     </div>
     
     <div class="sec1nav">
@@ -177,7 +178,7 @@
                 <img class="p3" src="imgs/portfolio/xprice.png" alt="p3">
                 <img class="p4" src="imgs/portfolio/railway.png" alt="p4">
                 <img class="p5" src="imgs/portfolio/crossuniv.png" alt="p5">
-                <img class="p6" src="imgs/portfolio/crossuniv.png" alt="p6">
+                <img class="p6" src="imgs/portfolio/mips.png" alt="p6">
         	</div>
             <div class="sec2mask original-mask"></div>
             <div class="row">
@@ -189,8 +190,8 @@
                 <hr class="hr-dark wow zoomIn" data-wow-delay="0.2s">
                 <div class="aboutright-inner text-center">
 				  	<div class="clearfix wow fadeInUp" data-wow-delay="0.3s">
-						<span>I've got what you need!</span>
-						<p>I am enthusiastic with any programming work related to graphic user interface and database. I am hard-working and always on time! Take a look at what I can do and what I've done!</p>
+						<span>Alive and Exclusive!</span>
+						<p>I am a student fascinated by the world created by codes and programs, either with visually astonishing outcomes or with rigorous yet delicate data manipulation. Once working, I create only the exclusives, with all my heart. Take a look at what I can do and what I've done!</p>
 					</div>
 				</div>
               </div>
@@ -307,7 +308,7 @@
                 </div>
                 <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
                 	<h3><strong>Java, Software Management</strong></h3>
-                    <p>CTC Railway control system, a combination of embedded system and supporting software programming task. The final prototype was designed and built stricktly according to documents provided by Port Authority(PAAC).</p>
+                    <p>CTC Railway control system, a combination of embedded system and supporting software programming task. The final prototype was designed and built stricktly according to documents provided by Port Authority (PAAC).</p>
                     <a class="btn btn1 btn2" href="https://github.com/tic30/CTC-Railway-System-By-RedPanda-Coding/tree/master/src/cn/ctc" target="_blank">See Code in GitHub</a>
                 </div>
               </div>
@@ -394,6 +395,10 @@
               	<hr class="hr-dark wow zoomIn">
                 <p class="wow fadeInUp"><div class="sec6titlep">I am open for hire!</div></p>
 			</div>
+            <div class="row self-intro wow fadeInUp">
+            	<p><span>I</span> am enthusiastic with any programming work related to graphic user interface and/or database. I am hard-working and always on time!</p>
+                <p><span>A</span>t the moment, I am looking for an entry level full-time job starting January 2017. I am open to relocation within USA, prefered city is Seattle, WA.</p>
+            </div>
             <div class="row">
                 <div class="contact-details-wrapper col-md-5 wow fadeInLeft" data-wow-delay="0.3s">
 					<address class="contact-details">			
