--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@ var _hmt = _hmt || [];
         	<li class="sec1nav-brand">
             	<a href="#pageTop" class="local-scroll"><div class="steady">T</div><div class="zoom">ianxin&nbsp;</div><div class="steady">C</div><div class="zoom">hu</div><br/><hr></a>
             </li>
-        	<li class="nav-img-wrapper"><a href="#chu-menu"><img class="nav-img" id="chu-menu" src="imgs/icons/chu-menu.png" alt="Loading menu..."></a></li>
+        	<li class="nav-img-wrapper"><a href="#chu-menu">
+            	<img class="nav-img nav-img1" id="chu-menu" src="imgs/icons/chu-menu.png" alt="Loading menu...">
+        		<img class="nav-img nav-img2" src="imgs/icons/arrow01.png" alt="Loading menu...">
+            </a></li>
         </ul>
         <div class="dd">Believe What You See</div>
     </div>
@@ -51,7 +54,10 @@ var _hmt = _hmt || [];
                     <p>Shortcuts for everything</p> 
                 </div>            
                 <div class="closeButton">
-                	<a href="#menu-close"><img class="nav-img" id="menu-close" src="imgs/icons/close.png" alt="Loading close..."></a>
+                	<a href="#menu-close">
+                		<img class="nav-img nav-img1" id="menu-close" src="imgs/icons/close.png" alt="Loading close...">
+                    	<img class="nav-img nav-img2" src="imgs/icons/arrow01.png" alt="Loading close2...">
+                	</a>
                 </div>
                 <div class="myTable">
                       <div class="row slider-item">
