--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <link rel="stylesheet" href="css/chu-custom.css">
 
 <!--statistics-->
+<!--
 <script>
 var _hmt = _hmt || [];
 (function() {
@@ -23,13 +24,13 @@ var _hmt = _hmt || [];
   var s = document.getElementsByTagName("script")[0]; 
   s.parentNode.insertBefore(hm, s);
 })();
-</script>
+</script>-->
 </head>
 
 <body id="pageTop">
 	<div class="preloader-wrapper text-center">
     	<img src="imgs/chu-preloader.gif" alt="Loading preloader...">
-        <div><a class="btn btn1 btn2 preloader-button">Continue...</a></div>
+        <div class="preloader-button-wrapper"><button class="btn btn1 btn2 preloader-button">Continue...</button></div>
     </div>
     
     <div class="sec1nav">
