--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link rel="stylesheet" href="css/chu-custom.css">
 
 <!--statistics-->
-<!--
+
 <script>
 var _hmt = _hmt || [];
 (function() {
@@ -24,7 +24,7 @@ var _hmt = _hmt || [];
   var s = document.getElementsByTagName("script")[0]; 
   s.parentNode.insertBefore(hm, s);
 })();
-</script>-->
+</script>
 </head>
 
 <body id="pageTop">
