--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ var _hmt = _hmt || [];
                 <div class="aboutright-inner text-center">
 				  	<div class="clearfix wow fadeInUp" data-wow-delay="0.3s">
 						<span>Alive and Exclusive!</span>
-						<p>I am a student fascinated by the world created by codes and programs, either with visually astonishing outcomes or with rigorous yet delicate data manipulation. Once working, I create only the exclusives, with all my heart. Take a look at what I can do and what I've done!</p>
+						<p>I am a student fascinated by the world created by codes and programs, a world either with visually astonishing outcomes or with rigorous yet delicate data manipulation. Once working, I create only exclusive products, with all my heart. Take a look at what I've done and what I can do for you!</p>
 					</div>
 				</div>
               </div>
@@ -289,7 +289,7 @@ var _hmt = _hmt || [];
               <div class="row text-center" id="portfolio1">
                 <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
                 	<h3><strong>HTML, PHP, MySQL, JDBC</strong></h3>
-                    <p>FaceSpace, the smiling social network, featuring emotion sharing and funny pictures browsing. This project is built based on MySQL database with delicated SQL and Java programming. Also we use PHP to generate front end website and mobile applications.</p>
+                    <p>FaceSpace - the smiling social network. It features emotion sharing and media streaming. This project is built based on MySQL database with dedicated SQL and Java programming. We use PHP to generate the front end website and mobile applications.</p>
                     <a class="btn btn1 btn2" href="https://github.com/tic30/FaceSpace" target="_blank">See Code in GitHub</a>
                 </div>
                 <div class="col-sm-6 pimg-wrapper wow fadeInUp col-sm-offset-1">
@@ -304,14 +304,14 @@ var _hmt = _hmt || [];
                 </div>
                 <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
                 	<h3><strong>HTML, CSS, JavaScript, JQuery</strong></h3>
-                    <p>Airome, the smart purifier. This is a web based file system coded for the product presentation. The focuses are on optimizing large images/videos to improve performance and building smooth transitions and animations.</p>
+                    <p>Airome, the smart purifier. This is a web based file system coded for product presentation. The focuse is on optimizing large images/videos to improve performance and building smooth transitions and animations.</p>
                     <a class="btn btn1 btn2" href="https://github.com/tic30/Airome" target="_blank">See Code in GitHub</a>
                 </div>
               </div>
               <div class="row text-center" id="portfolio3">
                 <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
                 	<h3><strong>Java, PHP, SQL, Android API</strong></h3>
-                    <p>Panther Read, a mobile learning app to enter XPrice competition aiming to improve adult literacy. Our group of software engineers are working closely with psychologists and linguists in PITT to create an efficient and incentive learning process.</p>
+                    <p>Panther Read - a mobile learning app being built to enter the XPrice competition to improve adult literacy. Our group of software engineers are working closely with psychologists and linguists at PITT to create an efficient and incentivized learning process.</p>
                     <a class="btn btn1 btn2" href="https://drive.google.com/open?id=0B1dSWHM51dn-T2k0MmxOQ2FJeEE" target="_blank">Research & Design</a>
                 </div>
                 <div class="col-sm-6 pimg-wrapper wow fadeInUp col-sm-offset-1">
@@ -326,14 +326,14 @@ var _hmt = _hmt || [];
                 </div>
                 <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
                 	<h3><strong>Java, Software Management</strong></h3>
-                    <p>CTC Railway control system, a combination of embedded system and supporting software programming task. The final prototype was designed and built stricktly according to documents provided by Port Authority (PAAC).</p>
+                    <p>The CTC Railway control system - a combination of embedded system and supporting software programming task. The final prototype was designed and built stricktly according to documents provided by the Pittsburgh Port Authority (PAAC).</p>
                     <a class="btn btn1 btn2" href="https://github.com/tic30/CTC-Railway-System-By-RedPanda-Coding/tree/master/src/cn/ctc" target="_blank">See Code in GitHub</a>
                 </div>
               </div>
               <div class="row text-center" id="portfolio5">
                 <div class="col-sm-3 col-md-3 pp-wrapper wow fadeInDown col-sm-offset-1">
                 	<h3><strong>Java, Android API, Adobe Design Tools</strong></h3>
-                    <p>CrossUniv Bus tracking app, features trip-by-school-bus planning with feeds from PITT, CMU and city bus, all in one app. This app is designed for local students to enjoy bus rides with highest possible time efficiency.</p>
+                    <p>CrossUniv Bus tracking app. It features bus trip planning with feeds from PITT/CMU school bus systems and the Pittsburgh city bus system, all in one app. This app is designed for local students to enjoy free bus rides with the highest possible time efficiency.</p>
                     <a class="btn btn1 btn2" href="https://www.behance.net/gallery/38281809/CrossUniv-Bus" target="_blank">Go to my Bēhance</a>
                 </div>
                 <div class="col-sm-6 pimg-wrapper wow fadeInUp col-sm-offset-1">
@@ -409,13 +409,13 @@ var _hmt = _hmt || [];
     	<div class="sec6mask"></div>
     	<div id="sec6-content" class="container">
 			<div class="sec-title text-center" data-wow-delay="0.2s">
-				<h2 class="wow fadeInDown"><div class="sec6titleh2">Lets Talk</div></h2>
+				<h2 class="wow fadeInDown"><div class="sec6titleh2">Let's Talk</div></h2>
               	<hr class="hr-dark wow zoomIn">
                 <p class="wow fadeInUp"><div class="sec6titlep">I am open for hire!</div></p>
 			</div>
             <div class="row self-intro wow fadeInUp">
-            	<p><span>I</span> am enthusiastic with any programming work related to graphic user interface and/or database. I am hard-working and always on time!</p>
-                <p><span>A</span>t the moment, I am looking for an entry level full-time job starting January 2017. I am open to relocation within USA, prefered city is Seattle, WA.</p>
+            	<p><span>I</span> am enthusiastic about full stack programming, network administration and security. My strength is front end development and database management. I am hard-working and always on time!</p>
+                <p><span>A</span>t the moment, I am looking for a full-time job position starting January 2017. I am open to relocation within the United States.</p>
             </div>
             <div class="row">
                 <div class="contact-details-wrapper col-md-5 wow fadeInLeft" data-wow-delay="0.3s">
