--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ var _hmt = _hmt || [];
                 <div class="aboutright-inner text-center">
 				  	<div class="clearfix wow fadeInUp" data-wow-delay="0.3s">
 						<span>Alive and Exclusive!</span>
-						<p>I am a student fascinated by the world created by codes and programs, a world either with visually astonishing outcomes or with rigorous yet delicate data manipulation. Once working, I create only exclusive products, with all my heart. Take a look at what I've done and what I can do for you!</p>
+						<p>I am fascinated by the world created by codes and programs, a world either with visually astonishing outcomes or with rigorous yet delicate data manipulation. Once working, I create only exclusive products, with all my heart. Take a look at what I've done and what I can do for you!</p>
 					</div>
 				</div>
               </div>
@@ -414,8 +414,8 @@ var _hmt = _hmt || [];
                 <p class="wow fadeInUp"><div class="sec6titlep">I am open for hire!</div></p>
 			</div>
             <div class="row self-intro wow fadeInUp">
-            	<p><span>I</span> am enthusiastic about full stack programming, network administration and security. My strength is front end development and database management. I am hard-working and always on time!</p>
-                <p><span>A</span>t the moment, I am looking for a full-time job position starting January 2017. I am open to relocation within the United States.</p>
+            	<p><span>I</span> am enthusiastic with web-based application, full stack programming and interactive computing research. My strength is front end development and database management. I am hard-working and always on time!</p>
+                <p><span>A</span>t the moment, I am looking for a short term contract/full-time job position starting January 2017. I am open to relocation within the United States.</p>
             </div>
             <div class="row">
                 <div class="contact-details-wrapper col-md-5 wow fadeInLeft" data-wow-delay="0.3s">
