--- a/index.html
+++ b/index.html
@@ -414,15 +414,15 @@ var _hmt = _hmt || [];
                 <p class="wow fadeInUp"><div class="sec6titlep">I am open for hire!</div></p>
 			</div>
             <div class="row self-intro wow fadeInUp">
-            	<p><span>I</span> am enthusiastic with web-based application, full stack programming and interactive computing research. My strength is front end development and database management. I am hard-working and always on time!</p>
-                <p><span>A</span>t the moment, I am looking for a short term contract/full-time job position starting January 2017. I am open to relocation within the United States.</p>
+            	<p><span>I</span> am enthusiastic with web-based application, full stack programming and interactive computing research. My strength is front end development and prototyping. I am hard-working and always on time!</p>
+                <p><span>A</span>t the moment, I am open to positions for summer 2018 and after May 2019. I am open to relocation within the United States.</p>
             </div>
             <div class="row">
                 <div class="contact-details-wrapper col-md-5 wow fadeInLeft" data-wow-delay="0.3s">
 					<address class="contact-details">			
 						<p><a href="https://github.com/tic30" target="_blank"><i class="fa fa-github fa-2x"></i><span class="hidespan1">Follow me on GitHub</span></a></p>
                         <p><a href="mailto:chutianxin@gmail.com"><i class="fa fa-envelope fa-18x"></i><span class="hidespan2">chutianxin@gmail.com</span></a></p>
-                        <p><a href="skype:c.horizon?userinfo"><i class="fa fa-skype fa-2x"></i><span class="hidespan3">TChu</span></a></p>
+                        <p><a href="skype:c.horizon?userinfo"><i class="fa fa-skype fa-2x"></i><span class="hidespan3">Tim Chu</span></a></p>
         				<p><a href="tel:765-714-5794"><i class="fa fa-phone fa-2x"></i><span class="hidespan4">(765) 714-5794</span></a></p>
 					</address>
 				</div>
