--- a/index.html
+++ b/index.html
@@ -419,8 +419,8 @@ var _hmt = _hmt || [];
                 <p class="wow fadeInUp"><div class="sec6titlep">I am open for hire!</div></p>
 			</div>
             <div class="row self-intro wow fadeInUp">
-            	<p><span>I</span> am enthusiastic with web-based application, full stack programming and interactive computing research. My strength is front end development and prototyping. I am hard-working and always on time!</p>
-                <p><span>A</span>t the moment, I am open to positions for summer 2018 and after May 2019. I am open to relocation within the United States.</p>
+            	<p><span>I</span> am enthusiastic with web-based application, full stack programming and interactive computing & UX research. My strength is front end development and prototyping. I am hard-working and always on time!</p>
+                <p><span>A</span>t the moment, I am open to positions within or near Seattle area. My availability starts around 9/1/2018.</p>
             </div>
             <div class="row">
                 <div class="contact-details-wrapper col-md-5 wow fadeInLeft" data-wow-delay="0.3s">
