--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@ var _hmt = _hmt || [];
 							<textarea name="message" class="form-control" placeholder="Your message..." disabled="true"></textarea>
 						</div>
 						<button type="submit" id="submit" class="form-control btn btn1" style="padding-top:3px; margin-bottom:30px" disabled="true">Send</button>
-						<p>Message Function (PHP) is Currently Not Supported by GitHub Page</p>
+						<p>Security update in progress...</p>
                     </form>
 				</div>
 			</div>
