--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ var _hmt = _hmt || [];
                 <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
                 	<h3><strong>Microsoft HoloLens, Unity, C#, JavaScript</strong></h3>
                     <p>Dashboard project - a research project aiming to build an educational app on HoloLens that enhances in-class communication and visualize feedback from students to help instructors conduct efficient teaching.</p>
-                    <a class="btn btn1 btn2" href="https://github.com/tic30/FaceSpace" target="_blank" style="pointer-events: none">In Progress...</a>
+                    <a class="btn btn1 btn2" href="./subpages/dashboard.html">Read More</a>
                 </div>
                 <div class="col-sm-6 pimg-wrapper wow fadeInUp col-sm-offset-1">
                 	<img class="pimg-code" src="imgs/portfolio/hololens.jpg" alt="Loading HoloLens...">
@@ -305,7 +305,7 @@ var _hmt = _hmt || [];
                 <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
                 	<h3><strong>HTML, CSS, JavaScript, JQuery</strong></h3>
                     <p>Airome, the smart purifier. This is a web based file system coded for product presentation. The focuse is on optimizing large images/videos to improve performance and building smooth transitions and animations.</p>
-                    <a class="btn btn1 btn2" href="https://github.com/tic30/Airome" target="_blank">See Code in GitHub</a>
+                    <a class="btn btn1 btn2" href="./Airome">See A Demo Page</a>
                 </div>
               </div>
               <div class="row text-center" id="portfolio3">
