--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <meta name="keywords" content="tianxin, chu, portfolio, single page, one page, interactive, creative, html5, css3, css3 animation, jquery">
 <meta name="author" content="Tianxin Chu">
 <title>Tianxin's Homepage</title>
+<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <link rel="icon" href="imgs/icons/icon.png">
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -51,34 +52,41 @@ var _hmt = _hmt || [];
             <div class="sidebar-nav">
                 <div class="sec-title sidebar-brand">
                     <h2>Explore</h2>
-                    <hr>
-                    <p>Shortcuts for everything</p> 
+                    <!--<hr>
+                    <p>Shortcuts for everything</p> -->
                 </div>            
                 <div class="closeButton">
                 	<a href="#menu-close">
-                		<img class="nav-img nav-img1" id="menu-close" src="imgs/icons/close.png" alt="Loading close...">
-                    	<img class="nav-img nav-img2" src="imgs/icons/arrow01.png" alt="Loading close2...">
+                		<img class="nav-img nav-img1 inverted" id="menu-close" src="imgs/icons/close.png" alt="Loading close...">
+                    	<img class="nav-img nav-img2 inverted" src="imgs/icons/arrow01.png" alt="Loading close2...">
                 	</a>
                 </div>
                 <div class="myTable">
                       <div class="row slider-item">
                       	<div class="td-inner">
                       		<div class="td-color td-o"></div>
-                            <a href="#sec2" class="local-scroll"><div class="td-words">Who am I</div></a>
+                            <a href="#sec2" class="local-scroll"><div class="td-words">Summary</div></a>
                         </div>
                       </div>
                       <div class="row slider-item">
                       	<div class="td-inner">
                       		<div class="td-color td-b"></div>
-                            <a href="#sec3" class="local-scroll"><div class="td-words">What I Can Do</div></a>
+                            <a href="#sec3" class="local-scroll"><div class="td-words">Skill List</div></a>
                         </div>
                       </div>
                       <div class="row slider-item">
                       	<div class="td-inner">
-                      		<div class="td-color td-g"></div>
-                            <a href="#sec5" class="local-scroll"><div class="td-words">Lets Talk</div></a>
+                      		<div class="td-color td-r"></div>
+                            <a href="#sec4" class="local-scroll"><div class="td-words">Projects</div></a>
                       	</div>
                       </div>
+                      <div class="row slider-item">
+                      	<div class="td-inner">
+                      		<div class="td-color td-g"></div>
+                            <a href="#sec5" class="local-scroll"><div class="td-words">Contacts</div></a>
+                      	</div>
+                      </div>
+                    <div style="display:none">
                 	  <div class="row" style="height:60px"></div>
                       <div class="row myTable-second-half">
                         <div class="slider-item slider-img-wrapper">
@@ -170,6 +178,7 @@ var _hmt = _hmt || [];
                           </a>
                         </div>
                       </div>
+                       </div>
                  </div>
             </div>
         </div>
@@ -181,7 +190,7 @@ var _hmt = _hmt || [];
         	<img id="chu-logo" src="imgs/icons/chu-logo.png" alt="Loading Logo...">
             <div id="hand"><img src="imgs/icons/hand.png" alt="Loading hand..."></div>
             <img id="smile3" src="imgs/icons/smile.png" alt="Loading smile...">
-            <p id="sec1-p">I'M A <span class="sec1-p-span" id="coe">Software Engineer&nbsp;</span>FROM<span class="sec1-p-span" id="uiux">&nbsp;PITT</span></p>
+            <p id="sec1-p">I'M A <span class="sec1-p-span" id="coe">Front End Engineer&nbsp;</span>FROM<span class="sec1-p-span" id="uiux" data-toggle="tooltip" data-placement="bottom" title="University of Pittsburgh">&nbsp;PITT</span></p>
         </div>
         <div class="arrow_box"></div>
     </section>
@@ -208,8 +217,8 @@ var _hmt = _hmt || [];
                 <hr class="hr-dark wow zoomIn" data-wow-delay="0.2s">
                 <div class="aboutright-inner text-center">
 				  	<div class="clearfix wow fadeInUp" data-wow-delay="0.3s">
-						<span>Alive and Exclusive!</span>
-						<p>I am fascinated by the world created by codes and programs, a world either with visually astonishing outcomes or with rigorous yet delicate data manipulation. Once working, I create only exclusive products, with all my heart. Take a look at what I've done and what I can do for you!</p>
+						<span>An Open-minded Coder and Team Player</span>
+						<p>I am a detail oriented person who is able to demonstrates exquisite front end products that precisely expresses design language with easily reusable code. I put efforts in transferring design thinking to the software engineering process, especially in time management and workload distribution management.</p>
 					</div>
 				</div>
               </div>
@@ -283,13 +292,13 @@ var _hmt = _hmt || [];
     <section id="sec4">
     	<div id="sec4-content">
         	<div class="sec-title container-fluid text-center">
-              <h2 class="wow fadeInDown">Portfolio</h2>
+              <h2 class="wow fadeInDown">Projects</h2>
               <hr class="hr-dark wow zoomIn">
               <p class="wow animated fadeInUp-light">Code & Outcome Snaps</p>
               <div class="row text-center" id="portfolio1">
                 <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
                 	<h3><strong>Microsoft HoloLens, Unity, C#, JavaScript</strong></h3>
-                    <p>Dashboard project - a research project aiming to build an educational app on HoloLens that enhances in-class communication and visualize feedback from students to help instructors conduct efficient teaching.</p>
+                    <p>Dashboard - A research project aiming to build an educational app on HoloLens that enhances in-class communication to help instructors conduct efficient teaching.</p>
                     <a class="btn btn1 btn2" href="./subpages/dashboard.html">Read More</a>
                 </div>
                 <div class="col-sm-6 pimg-wrapper wow fadeInUp col-sm-offset-1">
@@ -305,7 +314,6 @@ var _hmt = _hmt || [];
                 <div class="col-sm-3 pp-wrapper wow fadeInDown col-sm-offset-1">
                 	<h3><strong>HTML, CSS, JavaScript, JQuery</strong></h3>
                     <p>Airome, the smart purifier. This is a web based file system coded for product presentation. The focuse is on optimizing large images/videos to improve performance and building smooth transitions and animations.</p>
-                    <a class="btn btn1 btn2" href="./Airome">See A Demo Page</a>
                 </div>
               </div>
               <div class="row text-center" id="portfolio3">
@@ -419,8 +427,8 @@ var _hmt = _hmt || [];
                 <p class="wow fadeInUp"><div class="sec6titlep">I am open for hire!</div></p>
 			</div>
             <div class="row self-intro wow fadeInUp">
-            	<p><span>I</span> am enthusiastic with full stack programming and interactive computing & UX research. My strength is front end development and prototyping. I am hard-working and always on time!</p>
-                <p><span>A</span>t the moment, I am open to positions within or near Seattle area. My availability starts around 1/1/2018.</p>
+            	<p><span>I</span> am pursuing a career within the scope of web programming(full stack) and interactive computing/UX research. My strength is front end development and prototyping. Meanwhile I am always learning and would love to explore new technology fields.</p>
+                <p><span>A</span>t the moment, I am open to positions in Greater Seattle Area, WA. My availability starts at 1/1/2018.</p>
             </div>
             <div class="row">
                 <div class="contact-details-wrapper col-md-5 wow fadeInLeft" data-wow-delay="0.3s">
@@ -441,9 +449,6 @@ var _hmt = _hmt || [];
 							<input type="email" name="email" class="form-control" placeholder="Your Email..." disabled="true">
 						</div>
 						<div class="input-field">
-							<input type="text" name="subject" class="form-control" placeholder="Subject..." disabled="true">
-						</div>
-						<div class="input-field">
 							<textarea name="message" class="form-control" placeholder="Your message..." disabled="true"></textarea>
 						</div>
 						<button type="submit" id="submit" class="form-control btn btn1" style="padding-top:3px; margin-bottom:30px" disabled="true">Send</button>
@@ -460,7 +465,7 @@ var _hmt = _hmt || [];
     </div>
     
     <footer>
-    	<div>© Copyright 2016&nbsp;&nbsp;&nbsp;&nbsp;Chu,Tianxin</div>
+    	<div>© Copyright&nbsp;&nbsp;2016 - 2017&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Chu, Tianxin</div>
     </footer>
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
