--- a/subpages/siemens.html
+++ b/subpages/siemens.html
@@ -87,7 +87,7 @@
             <li>
                 <div>
                     <h2>Design & Develop for Digitalization</h2>
-                    <p>I mainly work on building a set of tools to digitalize factory work process and shop management practice. This product is part of <strong>Siemens' digitalization process</strong>. As an addition to functionality-wise digitalization, our group wish to build workflow solutions with efficiency, consistent quality and good user experience.</p>
+                    <p>I mainly work on building a set of tools to digitalize both factory work process and shop management practice. This product is part of <strong>Siemens' digitalization process</strong>. As an addition to functionality-wise digitalization, our group wish to build workflow solutions with efficiency, consistent quality and good user experience.</p>
                     <h2>With Out Product</h2>
                     <p style="margin-bottom: 0.5em">The factory team(user) will</p>
                     <ul class="fa-ul content-inner-ul">
@@ -168,6 +168,7 @@
                     <p>Great news: All funding is recently approved! The budget is <strong>multi-million dollars</strong>. It is time to sprint wth full-speed as a fully geared team.</p>
                     <p>In current sprint we are working hard to finish implementing the software package and conduct effective testing along the way. I am also working closely with designers in our team to harmonize the interface design and revise some of the usability design. I am confident that by the end of my employment we will be able to deliver and launch a well-designed and fully functional product as planned.</p>
                     <p style="color: #aaaaaa">© Copyright 2016-2017&nbsp;&nbsp;&nbsp;&nbsp;Chu,Tianxin & Siemens Corp.</p>
+                    <p style="color: #aaaaaa; font-size: 12px">Disclaimer: Software mentioned in this site is the property of Siemens Corp. and is not open-sourced. The company policy strictly prohibites the publication of information that may increase the risk of harming the software, employees or business operation. All information provided on and taken from this website is at their own risk. Unless otherwise noted, Chu is the legal copyright holder of all material on this website and others cannot use it to reprint or publish without Chu's written consent. </p>
                 </div>
             </li>
         </ul>
