--- a/subpages/dashboard.html
+++ b/subpages/dashboard.html
@@ -41,15 +41,15 @@
             <img class="logo logo0" src="subimgs/icons/dbicon0.png" alt="Loading Logo...">
             <img class="logo logo1 dashboard-anim" src="subimgs/icons/dbicon1.png" alt="Loading Logo...">
         </div>
-        <div id="sec1-content">
-            <div class="left-panel sec1-leftp-anim animated-forwards"><img class="cmu" src="subimgs/cmu.png" alt="Loading Logo..."></div>
+        <div class="sec1-white-cover animated-forwards-slow">
+            <!--<div class="left-panel sec1-leftp-anim animated-forwards"><img class="cmu" src="subimgs/cmu.png" alt="Loading Logo..."></div>
             <div class="right-panel sec1-rightp-anim animated-forwards-slow">
                 <img class="cmu animated fadeOut" src="subimgs/hcii.png" alt="Loading Logo...">
-            </div>
+            </div>-->
         </div>
         <div class="dashboardtext">
             <div class="fadeInDown animated">Dashboard</div>
-            <span class="fadeInUp animated">Research Project</span>
+            <span class="fadeInUp animated-forwards-slow">Research Project @ CMU.HCII</span>
         </div>
         <div id="sec1-down" class="chu-down wow mybounce inverted"><img src="../imgs/icons/chu-down.png" alt="Loading down icon..."></div>
     </section>
@@ -64,8 +64,8 @@
                     <h1>Q</h1>
                     <hr class="hr-dark wow zoomIn">
                     <div>What problem to solve?</div>
-                    <div class="hint">>> Look closer
-                        <<</div>
+                    <!--<div class="hint">>> Look closer
+                        <<</div>-->
                     </div>
                 </div>
 
@@ -83,6 +83,7 @@
                         </ul>
                         <div class="replay-youtube animated fadeInUp li4" type="button"><i class="fa fa-repeat" aria-hidden="true"></i></div>
                     </div>
+                    <div class="chu-down wow mybounce inverted"><img src="../imgs/icons/chu-down.png" alt="Loading down icon..."></div>
                 </div>
             </div>
     </section>
