--- a/subpages/dashboard.html
+++ b/subpages/dashboard.html
@@ -178,9 +178,10 @@
             </div>
             <p class="content-p">By the end of my stay, our team has finished designing and constructing the database and pre-scan the designated classroom for testing purpose. We also finished visualizing data with web interface, making Unity interact with database, dynamically generating and placing objects based on retrived data, and rendering simple visual effects and animations. The image below is a demo web interface.</p>
             <img class="dashboard-img" src="subimgs/dashboard4.jpg" alt="Loading dashboard...">
-            <p class="content-p">In the image shown below, the white background object is the classroom scan model. The "objects" floating on top the PCs are figures which simulate visual feedback to remind teacher the learning status for specific student. All of them are dynamically generated and rendered based on local database input. The object behavior is also optimized to interact with camera movement and gesture.</p>
+            <!--<p class="content-p">In the image shown below, the white background object is the classroom scan model. The "objects" floating on top the PCs are figures which simulate visual feedback to remind teacher the learning status for specific student. All of them are dynamically generated and rendered based on local database input. The object behavior is also optimized to interact with camera movement and gesture.</p>-->
+            <p class="content-p">In the visual world, I built figures which simulate visual feedback to remind teacher the learning status for specific student, made them dynamically generated and rendered based on local database input. The object behavior is also optimized to interact with camera movement and gesture.</p>
             <img class="dashboard-img" src="subimgs/dashboard5.png" alt="Loading dashboard...">
-            <p class="content-p">Meanwhile, the steaming is tested seperately. With intention to bring our product online, more issues like web hosting, network accessibility and security need to be taken into consideration. In the near future, field testing will be conducted and more information can be collected to aid the decision-making progress.</p>
+            <p class="content-p">Meanwhile, the steaming is tested seperately. With intention to bring our product online, more issues like network accessibility and security need to be taken into consideration. In the near future, field testing will be conducted and more information can be collected to aid the decision-making progress.</p>
         </div>
     </section>
     <!-- /end of section 7 -->
@@ -200,9 +201,9 @@
         </div>
 
         <!-- float button -->
-        <div class="return-icon"><i class="fa fa-chevron-up" aria-hidden="true"></i>
+        <a href="#sec1" class="local-scroll return-icon"><i class="fa fa-chevron-up" aria-hidden="true"></i>
             <div class="return-icon-hint">Top</div>
-        </div>
+        </a>
 
     </section>
 
@@ -215,7 +216,7 @@
     <script src="../js/jquery.js"></script>
     <script src="../js/bootstrap.min.js"></script>
     <script src="../js/wow.min.js"></script>
-    <script src="subpagejs.js"></script>
+    <script src="dbjs.js"></script>
 </body>
 
 </html>
