--- a/subpages/siemens.html
+++ b/subpages/siemens.html
@@ -187,7 +187,7 @@
     <!-- .block-navigation -->
 
     <script src="../js/jquery.js"></script>
-    <script src="subpagejs.js"></script>
+    <script src="siemensjs.js"></script>
 </body>
 
 </html>
