--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     
     <!-- Sidebar -->
         <div id="sidebar-wrapper">
+            <div class="page-overlay"></div>
             <div class="sidebar-nav">
                 <div class="sec-title sidebar-brand">
                     <h2>Explore</h2>
@@ -64,27 +65,28 @@
                       <div class="row slider-item">
                       	<div class="td-inner">
                       		<div class="td-color td-o"></div>
-                            <a href="#sec2" class="local-scroll"><div class="td-words">Summary</div></a>
+                            <a href="#sec2" class="local-scroll"><img src="imgs/icons/summary.png"><div class="td-words">Summary</div></a>
                         </div>
                       </div>
                       <div class="row slider-item">
                       	<div class="td-inner">
                       		<div class="td-color td-b"></div>
-                            <a href="#sec3" class="local-scroll"><div class="td-words">Skill List</div></a>
+                            <a href="#sec3" class="local-scroll"><img src="imgs/icons/portfolio.png"><div class="td-words">Portfolio</div></a>
                         </div>
                       </div>
                       <div class="row slider-item">
                       	<div class="td-inner">
                       		<div class="td-color td-r"></div>
-                            <a href="#sec4" class="local-scroll"><div class="td-words">Projects</div></a>
+                            <a href="#sec5" class="local-scroll"><img src="imgs/icons/contact.png"><div class="td-words">Contacts</div></a>
                       	</div>
                       </div>
                       <div class="row slider-item">
                       	<div class="td-inner">
                       		<div class="td-color td-g"></div>
-                            <a href="#sec5" class="local-scroll"><div class="td-words">Contacts</div></a>
+                            <a href="https://drive.google.com/open?id=0B1dSWHM51dn-RGJBNlJZNFdaNW8" target="_blank"><img src="imgs/icons/resume.png"><div class="td-words">Resume</div></a>
                       	</div>
                       </div>
+                    <!--
                     <div style="display:none">
                 	  <div class="row" style="height:60px"></div>
                       <div class="row myTable-second-half">
@@ -177,7 +179,7 @@
                           </a>
                         </div>
                       </div>
-                       </div>
+                       </div>-->
                  </div>
             </div>
         </div>
