--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body id="pageTop">
 	<div class="preloader-wrapper text-center">
     	<img src="imgs/chu-preloader.gif" alt="Loading preloader...">
-        <div class="preloader-button-wrapper"><button class="btn btn1 btn2 preloader-button">Continue...</button></div>
+        <div class="preloader-button-wrapper"><button class="btn preloader-button">Continue...</button>--</div>
     </div>
     
     <div class="sec1nav">
@@ -43,7 +43,7 @@
         		<img class="nav-img nav-img2" src="imgs/icons/arrow01.png" alt="Loading menu...">
             </a></li>
         </ul>
-        <div class="dd">Believe What You See</div>
+        <div class="dd"><i class="fa fa-angle-up" aria-hidden="true" style="margin-right:10px"></i>Top</div>
     </div>
     
     <!-- Sidebar -->
@@ -191,7 +191,7 @@
         	<img id="chu-logo" src="imgs/icons/chu-logo.png" alt="Loading Logo...">
             <div id="hand"><img src="imgs/icons/hand.png" alt="Loading hand..."></div>
             <img id="smile3" src="imgs/icons/smile.png" alt="Loading smile...">
-            <p id="sec1-p">I'M A <span class="sec1-p-span" id="coe">Front End Engineer&nbsp;</span>FROM<span class="sec1-p-span" id="uiux" data-toggle="tooltip" data-placement="bottom" title="University of Pittsburgh">&nbsp;PITT</span></p>
+            <p id="sec1-p">I'M A <span class="sec1-p-span" id="coe" data-toggle="tooltip" data-placement="bottom" title="Now at SIEMENS Corp.">Front End Engineer&nbsp;</span>FROM<span class="sec1-p-span" id="uiux" data-toggle="tooltip" data-placement="bottom" title="University of Pittsburgh">&nbsp;PITT</span></p>
         </div>
         <div class="arrow_box"></div>
     </section>
@@ -200,6 +200,7 @@
     <!-- section 2 -->
     <section id="sec2">
     	<div id="sec2-content">
+            <!--
             <div class="slid-wrapper">
                 <img class="p1" src="imgs/portfolio/facespace.png" alt="p1">
                 <img class="p2" src="imgs/portfolio/airome.png" alt="p2">
@@ -208,6 +209,7 @@
                 <img class="p5" src="imgs/portfolio/crossuniv.png" alt="p5">
                 <img class="p6" src="imgs/portfolio/mips.png" alt="p6">
         	</div>
+            -->
             <div class="sec2mask original-mask"></div>
             <div class="row">
               <div class="leftimg">
@@ -222,6 +224,7 @@
 						<p>I am a detail oriented person who is able to demonstrates exquisite front end products that precisely expresses design language with easily reusable code. I put efforts in transferring design thinking to the software engineering process, especially in time management and workload distribution management.</p>
 					</div>
 				</div>
+                <i class="fa fa-chevron-up aboutright-up-icon" aria-hidden="true"></i>
               </div>
             </div>
         </div>
@@ -453,7 +456,7 @@
 							<textarea name="message" class="form-control" placeholder="Your message..." disabled="true"></textarea>
 						</div>
 						<button type="submit" id="submit" class="form-control btn btn1" style="padding-top:3px; margin-bottom:30px" disabled="true">Send</button>
-						<p>Security update in progress...</p>
+						<p>Mmm...Message? Why not send me an email? Or pick one from the left hand side!</p>
                     </form>
 				</div>
 			</div>
